fixed spacing issues with words and avatar

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -27,15 +27,15 @@ ul{
 
 li{
     border-top: 1px solid black;
-    padding-left: 7%;
-    padding-right: 7%;
+    padding-left: 3%;
+    padding-right:3%;
     overflow: auto;
     margin-bottom: 0;
 }
 
 li p{
-    padding-top: 25px;
-    margin-bottom: 0;
+    padding-top: 1%;
+
 }
 
 h1{
