--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,8 +34,9 @@ li{
 }
 
 li p{
-    padding-top: 25px;
-    margin-bottom: 0;
+    padding-top: 2%;
+    padding-bottom: 2%;
+
 }
 
 h1{
