--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -34,8 +34,8 @@ li{
 }
 
 li p{
-    padding-top: 25px;
-    margin-bottom: 0;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 h1{
